--- a/브라우저렌더링.md
+++ b/브라우저렌더링.md
@@ -10,13 +10,15 @@ HTML, CSS, Javascrip 등 개발자가 작성한 문서가 브라우저에 출력
 사용자가 브라우저를 통해 웹 사이트에 접속하면, 서버로부터 HTML, CSS 등 웹사이트에 필요한 리소스를 다운로드 받습니다.
 브라우저가 페이지를 렌더링 하려면 먼저 HTML 코드는 DOM, CSS는 CSSOM 트리를 생성해야 합니다.
 
-1.1 DOM 트리 생성 1. 변환: 브라우저가 HTML의 원시 바이트를 읽어와서, HTML에 정의된 인코딩에 따라 개별 묹자로 변혼합니다.
+1.1 DOM 트리 생성
 
-    2. 토큰화: 변환된 문자를 W3C 표준에 지정된 고유 토큰으로 변환시킵니다.
+1. 변환: 브라우저가 HTML의 원시 바이트를 읽어와서, HTML에 정의된 인코딩에 따라 개별 문자로 변환합니다.
 
-    3. 렉싱: 방출된 토큰은 해당 속성 및 규칙을 정의하는 "객체"로 변환됩니다.
+2. 토큰화: 변환된 문자를 W3C 표준에 지정된 고유 토큰으로 변환시킵니다.
 
-    4. DOM 생성: 마지막으로 HTML에 정의된 여러 태그 간의 관계를 해석해서 트리 구조로 연결이 됩니다.
+3. 렉싱: 방출된 토큰은 해당 속성 및 규칙을 정의하는 "객체"로 변환됩니다.
+
+4. DOM 생성: 마지막으로 HTML에 정의된 여러 태그 간의 관계를 해석해서 트리 구조로 연결이 됩니다.
 
 1.2 CSSOM 트리 생성
 
